--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,23 @@
+body {
+	background: black;
+}
+
+.main-content {
+	height: 750px;
+}
+
 #map {
-	height: 400px;
-	width: 100%;
+	height: 100%;
+}
+
+.info-content {
+	background: white;
+}
+
+.row {
+	margin-bottom: 0px;
+}
+
+.container {
+	height: 100%;
 }
