Modified css and added header functionality

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,15 +17,44 @@ th {
 	width: 50px;
 }
 
+.container {
+	font-family: 'Permanent Marker', cursive;
+}
+
+.header {
+	background: #6c4eff;
+	color: white;
+}
+
+#new-game {
+	width: 200px;
+	margin-top: 8px;
+	margin-right: 8px;
+	background: green;
+	font-size: 20px;
+}
+
+.title {
+	margin-left: 8px;
+	margin-top: 8px;
+}
+
+#player-stats {
+	width: 100px;
+}
+
 #munch {
 	height: 75px;
 	width: 100px;
 	display: none;
-	float: left;
+	z-index: 2;
+	position: absolute;
+	left: 110px;
 }
 
 .main-content {
 	height: 600px;
+	border: 10px ridge #6c4eff;
 }
 
 #map {
@@ -47,6 +76,7 @@ th {
 #player-fish {
 	width: 175px;
 	height: 150px;
+	position: relative;
 }
 
 .s6 {
@@ -59,4 +89,11 @@ th {
 
 .display-content {
 	border: 1px solid blue;
+	height: 155px;
+}
+
+#player-wrapper {
+	border: 1px solid black;
+	position: absolute;
+	width: 20%;
 }
