--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,16 @@ th {
 	width: 50px;
 }
 
+h1 {
+	text-align: center;
+	font-size: 50px;
+	font-weight: bold;
+}
+
+#death-level {
+	text-align: center;
+}
+
 .container {
 	font-family: 'Quando', serif;
 }
