Added login with key capability. Message pops up for 5 seconds if key is incorrect.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,14 @@ table {
 	padding-top: 20px;
 
 }
+.login-key {
+	display: block;
+}
+#invalid-key-login-message {
+	display: none;
+	color: red;
+	margin-top: 1em;
+}
 
 section {
 	padding-top: 42px;
