--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,11 +19,20 @@ table {
 }
 
 section {
-	padding-top: 42px;
+	padding-top: 36px;
 }
 
 th {
 	width: 50px;
+	padding: 1px;
+}
+
+h4 {
+	font-size: 20px;
+}
+
+td {
+	padding: 1px;
 }
 
 h1 {
@@ -60,7 +69,7 @@ h1 {
 }
 
 #player-stats {
-	width: 100px;
+	width: 400px;
 }
 
 #munch {
@@ -112,22 +121,19 @@ h1 {
 	height: 155px;
 }
 
-/*#player-wrapper {
-	position: absolute;
-	width: 20%;
-}*/
-
-@media screen and (max-width: 768px) and (min-width: 641px) {
-/*	.container {
-		width: 100%;
-		margin-left: 68px;
+@media screen and (max-width: 490px) {
+	#new-game {
+		width: 100px;
+		font-size: 10px;
 	}
 
-	#player-wrapper {
-		width: 100%;
+	nav .brand-logo {
+		font-size: 1.5rem;
 	}
+}
 
-	.info-wrapper {
-		width: 100%;
-	}*/
+@media screen and (max-width: 320px) {
+	nav .brand-logo {
+		font-size: 1.3rem;
+	}
 }
