--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,10 +130,18 @@ h1 {
 	nav .brand-logo {
 		font-size: 1.5rem;
 	}
+
+	.main-content {
+		height: 330px;
+	}
 }
 
 @media screen and (max-width: 320px) {
 	nav .brand-logo {
 		font-size: 1.3rem;
+	}
+
+	.main-content {
+		height: 400px;
 	}
 }
